--- a/wercker.yml
+++ b/wercker.yml
@@ -40,7 +40,7 @@ steps:
     #    server: $OKE_MASTER
     #    token: $OKE_TOKEN
     #    insecure-skip-tls-verify: true
-    #    command: patch deployment/quickstart-se -p '{"spec":{"progressDeadlineSeconds":300}}'
+    #    command: patch deployment/wsapi -p '{"spec":{"progressDeadlineSeconds":300}}'
 
     # Watch the Kubernetes deployment. Once the pods are considered healthy the step will exit 0
     # If they aren't healthy within 60 seconds, it will exit with a non 0 exit code, and cause the run to fail.
@@ -49,4 +49,4 @@ steps:
         server: $OKE_MASTER
         token: $OKE_TOKEN
         insecure-skip-tls-verify: true
-        command: rollout status deployment/quickstart-se
+        command: rollout status deployment/wsapi
